name:                blockchain-conduit
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
author:              Jacob Errington
maintainer:          blockchainconduit@mail.jerrington.me
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: Network.Blockchain
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <4.8,
    aeson >=0.10.0 && <1.0,
    time >=1.5 && <1.6,
    http-conduit >=2.1 && <2.2,
    bytestring >=0.10 && <0.11,
    text >=1.2 && <1.3,
    data-default >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
